ffigen/LabSoundHelper.h

typedef struct AudioStreamConfig {
    int32_t device_index;
    uint32_t desired_channels;
    float desired_samplerate;
} AudioStreamConfig;
AudioContext* createOfflineAudioContext(AudioStreamConfig outputConfig, double recordTimeMilliseconds);
int AudioContext_startOfflineRendering(AudioContext* context);
int AudioContext_makeAudioHardwareInputNode(AudioContext* context);
// AudioContext can pull node(s) at the end of each render quantum even
// when they are not connected to any downstream nodes. These two methods
// are called by the nodes who want to add/remove themselves into/from the
// automatic pull lists.
void AudioContext_addAutomaticPullNode(AudioContext* context, int nodeId);
void AudioContext_removeAutomaticPullNode(AudioContext* context, int nodeId);
// Called right before handlePostRenderTasks() to handle nodes which need to
// be pulled even when they are not connected to anything.
// Only an AudioHardwareDeviceNode should call this.
void AudioContext_processAutomaticPullNodes(AudioContext* context, int framesToProcess);
// Called at the start of each render quantum.
void AudioContext_handlePreRenderTasks(AudioContext* context);
// Called at the end of each render quantum.
void AudioContext_handlePostRenderTasks(AudioContext* context);
// connecting and disconnecting busses and parameters occurs asynchronously.
// synchronizeConnections will block until there are no pending connections,
// or until the timeout occurs.
void AudioContext_synchronizeConnections(AudioContext* context, int timeOut_ms);
// suspend the progression of time in the audio context, any queued samples will play
void AudioContext_suspend(AudioContext* context);
// if the context was suspended, resume the progression of time and processing in the audio context
void AudioContext_resume(AudioContext* context);
// The current time, measured at the start of the render quantum currently
// being processed. Most useful in a Node's process routine.
double AudioContext_currentTime(AudioContext* context);
// The current time, accurate versus the audio clock. Whereas currentTime
// advances discretely, once per render quanta, predictedCurrentTime
// is the sum of currentTime, and the amount of realworld time that has
// elapsed since the start of the current render quanta. This is useful on
// the main thread of an application in order to precisely synchronize
// expected audio events and other systems.
double AudioContext_predictedCurrentTime(AudioContext* context);
float AudioContext_sampleRate(AudioContext* context);
int AudioContext_isInitialized(AudioContext* context);
int AudioContext_isConnected(AudioContext* context, int destinationIndex, int sourceIndex);
void AudioContext_setDeviceNode(AudioContext* context, int nodeId);
int AudioContext_device(AudioContext* context);
int AudioContext_isOfflineContext(AudioContext* context);
uint64_t AudioContext_currentSampleFrame(AudioContext* context);
void AudioContext_connect(AudioContext* context, int destination, int source, int destIdx, int srcIdx);
// completely disconnect the node from the graph
void AudioContext_disconnect(AudioContext* context, int destination, int source, int destIdx, int srcIdx);
// completely disconnect the node from the graph
void AudioContext_disconnectCompletely(AudioContext* context, int node, int destIdx);