lib/src/generated_bindings.dart


  ffi.Pointer<ffi.Void> createOfflineAudioContext(
    AudioStreamConfig outputConfig,
    double recordTimeMilliseconds,
  ) {
    return _createOfflineAudioContext(
      outputConfig,
      recordTimeMilliseconds,
    );
  }

  late final _createOfflineAudioContext_ptr =
      _lookup<ffi.NativeFunction<_c_createOfflineAudioContext>>(
          'createOfflineAudioContext');
  late final _dart_createOfflineAudioContext _createOfflineAudioContext =
      _createOfflineAudioContext_ptr
          .asFunction<_dart_createOfflineAudioContext>();

  int AudioContext_startOfflineRendering(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_startOfflineRendering(
      context,
    );
  }

  late final _AudioContext_startOfflineRendering_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_startOfflineRendering>>(
          'AudioContext_startOfflineRendering');
  late final _dart_AudioContext_startOfflineRendering
      _AudioContext_startOfflineRendering =
      _AudioContext_startOfflineRendering_ptr.asFunction<
          _dart_AudioContext_startOfflineRendering>();

  int AudioContext_makeAudioHardwareInputNode(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_makeAudioHardwareInputNode(
      context,
    );
  }

  late final _AudioContext_makeAudioHardwareInputNode_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_makeAudioHardwareInputNode>>(
          'AudioContext_makeAudioHardwareInputNode');
  late final _dart_AudioContext_makeAudioHardwareInputNode
      _AudioContext_makeAudioHardwareInputNode =
      _AudioContext_makeAudioHardwareInputNode_ptr.asFunction<
          _dart_AudioContext_makeAudioHardwareInputNode>();

  void AudioContext_addAutomaticPullNode(
    ffi.Pointer<ffi.Void> context,
    int nodeId,
  ) {
    return _AudioContext_addAutomaticPullNode(
      context,
      nodeId,
    );
  }

  late final _AudioContext_addAutomaticPullNode_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_addAutomaticPullNode>>(
          'AudioContext_addAutomaticPullNode');
  late final _dart_AudioContext_addAutomaticPullNode
      _AudioContext_addAutomaticPullNode =
      _AudioContext_addAutomaticPullNode_ptr.asFunction<
          _dart_AudioContext_addAutomaticPullNode>();

  void AudioContext_removeAutomaticPullNode(
    ffi.Pointer<ffi.Void> context,
    int nodeId,
  ) {
    return _AudioContext_removeAutomaticPullNode(
      context,
      nodeId,
    );
  }

  late final _AudioContext_removeAutomaticPullNode_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_removeAutomaticPullNode>>(
          'AudioContext_removeAutomaticPullNode');
  late final _dart_AudioContext_removeAutomaticPullNode
      _AudioContext_removeAutomaticPullNode =
      _AudioContext_removeAutomaticPullNode_ptr.asFunction<
          _dart_AudioContext_removeAutomaticPullNode>();

  void AudioContext_processAutomaticPullNodes(
    ffi.Pointer<ffi.Void> context,
    int framesToProcess,
  ) {
    return _AudioContext_processAutomaticPullNodes(
      context,
      framesToProcess,
    );
  }

  late final _AudioContext_processAutomaticPullNodes_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_processAutomaticPullNodes>>(
          'AudioContext_processAutomaticPullNodes');
  late final _dart_AudioContext_processAutomaticPullNodes
      _AudioContext_processAutomaticPullNodes =
      _AudioContext_processAutomaticPullNodes_ptr.asFunction<
          _dart_AudioContext_processAutomaticPullNodes>();

  void AudioContext_handlePreRenderTasks(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_handlePreRenderTasks(
      context,
    );
  }

  late final _AudioContext_handlePreRenderTasks_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_handlePreRenderTasks>>(
          'AudioContext_handlePreRenderTasks');
  late final _dart_AudioContext_handlePreRenderTasks
      _AudioContext_handlePreRenderTasks =
      _AudioContext_handlePreRenderTasks_ptr.asFunction<
          _dart_AudioContext_handlePreRenderTasks>();

  void AudioContext_handlePostRenderTasks(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_handlePostRenderTasks(
      context,
    );
  }

  late final _AudioContext_handlePostRenderTasks_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_handlePostRenderTasks>>(
          'AudioContext_handlePostRenderTasks');
  late final _dart_AudioContext_handlePostRenderTasks
      _AudioContext_handlePostRenderTasks =
      _AudioContext_handlePostRenderTasks_ptr.asFunction<
          _dart_AudioContext_handlePostRenderTasks>();

  void AudioContext_synchronizeConnections(
    ffi.Pointer<ffi.Void> context,
    int timeOut_ms,
  ) {
    return _AudioContext_synchronizeConnections(
      context,
      timeOut_ms,
    );
  }

  late final _AudioContext_synchronizeConnections_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_synchronizeConnections>>(
          'AudioContext_synchronizeConnections');
  late final _dart_AudioContext_synchronizeConnections
      _AudioContext_synchronizeConnections =
      _AudioContext_synchronizeConnections_ptr.asFunction<
          _dart_AudioContext_synchronizeConnections>();

  void AudioContext_suspend(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_suspend(
      context,
    );
  }

  late final _AudioContext_suspend_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_suspend>>(
          'AudioContext_suspend');
  late final _dart_AudioContext_suspend _AudioContext_suspend =
      _AudioContext_suspend_ptr.asFunction<_dart_AudioContext_suspend>();

  void AudioContext_resume(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_resume(
      context,
    );
  }

  late final _AudioContext_resume_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_resume>>(
          'AudioContext_resume');
  late final _dart_AudioContext_resume _AudioContext_resume =
      _AudioContext_resume_ptr.asFunction<_dart_AudioContext_resume>();

  double AudioContext_currentTime(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_currentTime(
      context,
    );
  }

  late final _AudioContext_currentTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_currentTime>>(
          'AudioContext_currentTime');
  late final _dart_AudioContext_currentTime _AudioContext_currentTime =
      _AudioContext_currentTime_ptr.asFunction<
          _dart_AudioContext_currentTime>();

  double AudioContext_predictedCurrentTime(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_predictedCurrentTime(
      context,
    );
  }

  late final _AudioContext_predictedCurrentTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_predictedCurrentTime>>(
          'AudioContext_predictedCurrentTime');
  late final _dart_AudioContext_predictedCurrentTime
      _AudioContext_predictedCurrentTime =
      _AudioContext_predictedCurrentTime_ptr.asFunction<
          _dart_AudioContext_predictedCurrentTime>();

  double AudioContext_sampleRate(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_sampleRate(
      context,
    );
  }

  late final _AudioContext_sampleRate_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_sampleRate>>(
          'AudioContext_sampleRate');
  late final _dart_AudioContext_sampleRate _AudioContext_sampleRate =
      _AudioContext_sampleRate_ptr.asFunction<_dart_AudioContext_sampleRate>();

  int AudioContext_isInitialized(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_isInitialized(
      context,
    );
  }

  late final _AudioContext_isInitialized_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_isInitialized>>(
          'AudioContext_isInitialized');
  late final _dart_AudioContext_isInitialized _AudioContext_isInitialized =
      _AudioContext_isInitialized_ptr.asFunction<
          _dart_AudioContext_isInitialized>();

  int AudioContext_isConnected(
    ffi.Pointer<ffi.Void> context,
    int destinationIndex,
    int sourceIndex,
  ) {
    return _AudioContext_isConnected(
      context,
      destinationIndex,
      sourceIndex,
    );
  }

  late final _AudioContext_isConnected_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_isConnected>>(
          'AudioContext_isConnected');
  late final _dart_AudioContext_isConnected _AudioContext_isConnected =
      _AudioContext_isConnected_ptr.asFunction<
          _dart_AudioContext_isConnected>();

  void AudioContext_setDeviceNode(
    ffi.Pointer<ffi.Void> context,
    int nodeId,
  ) {
    return _AudioContext_setDeviceNode(
      context,
      nodeId,
    );
  }

  late final _AudioContext_setDeviceNode_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_setDeviceNode>>(
          'AudioContext_setDeviceNode');
  late final _dart_AudioContext_setDeviceNode _AudioContext_setDeviceNode =
      _AudioContext_setDeviceNode_ptr.asFunction<
          _dart_AudioContext_setDeviceNode>();

  int AudioContext_device(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_device(
      context,
    );
  }

  late final _AudioContext_device_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_device>>(
          'AudioContext_device');
  late final _dart_AudioContext_device _AudioContext_device =
      _AudioContext_device_ptr.asFunction<_dart_AudioContext_device>();

  int AudioContext_isOfflineContext(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_isOfflineContext(
      context,
    );
  }

  late final _AudioContext_isOfflineContext_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_isOfflineContext>>(
          'AudioContext_isOfflineContext');
  late final _dart_AudioContext_isOfflineContext
      _AudioContext_isOfflineContext = _AudioContext_isOfflineContext_ptr
          .asFunction<_dart_AudioContext_isOfflineContext>();

  int AudioContext_currentSampleFrame(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _AudioContext_currentSampleFrame(
      context,
    );
  }

  late final _AudioContext_currentSampleFrame_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_currentSampleFrame>>(
          'AudioContext_currentSampleFrame');
  late final _dart_AudioContext_currentSampleFrame
      _AudioContext_currentSampleFrame = _AudioContext_currentSampleFrame_ptr
          .asFunction<_dart_AudioContext_currentSampleFrame>();

  void AudioContext_connect(
    ffi.Pointer<ffi.Void> context,
    int destination,
    int source,
    int destIdx,
    int srcIdx,
  ) {
    return _AudioContext_connect(
      context,
      destination,
      source,
      destIdx,
      srcIdx,
    );
  }

  late final _AudioContext_connect_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_connect>>(
          'AudioContext_connect');
  late final _dart_AudioContext_connect _AudioContext_connect =
      _AudioContext_connect_ptr.asFunction<_dart_AudioContext_connect>();

  void AudioContext_disconnect(
    ffi.Pointer<ffi.Void> context,
    int destination,
    int source,
    int destIdx,
    int srcIdx,
  ) {
    return _AudioContext_disconnect(
      context,
      destination,
      source,
      destIdx,
      srcIdx,
    );
  }

  late final _AudioContext_disconnect_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_disconnect>>(
          'AudioContext_disconnect');
  late final _dart_AudioContext_disconnect _AudioContext_disconnect =
      _AudioContext_disconnect_ptr.asFunction<_dart_AudioContext_disconnect>();

  void AudioContext_disconnectCompletely(
    ffi.Pointer<ffi.Void> context,
    int node,
    int destIdx,
  ) {
    return _AudioContext_disconnectCompletely(
      context,
      node,
      destIdx,
    );
  }
